fix deprecated URL class